--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Love stories'
 - !lcsh 'Americans -- Italy -- Fiction'
+- GITenberg
 title: Jerry
 url: http://www.gutenberg.org/ebooks/20357
